Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-620: Website Documentation: How to use Hive I/O with Giraph (nitay)

  GIRAPH-667: Decouple Vertex data and Computation, make Computation
  and Combiner classes switchable (majakabiljo)

  GIRAPH-608: Spelling error in Combiner.java (Michael Aro via aching)

  GIRAPH-666: Netty execs threads and metrics threads don't get 
  cleaned up properly (aching)

  GIRAPH-665: Reduce ZooKeeper output in tests by changing log level from 
  INFO to ERROR (aching)

  GIRAPH-664: Bump HiveIO dep - fixes tests with hadoop facebook
  (nitayj via majakabiljo)

  GIRAPH-622: Website Documentation: Out-of-core (claudio)

  GIRAPH-659: giraph-hive tests all fail (majakabiljo)

  GIRAPH-663: Fix HiveIO metastore host setting (nitay)

  GIRAPH-661: Munge symbols helper (nitay)

  GIRAPH-662: Incubator release should point to archived (aching)

  GIRAPH-655: Fix Hive Build for Hadoop 2.0.0 (nitay)

  GIRAPH-660: Move the snapshot to 1.1.0 and also add a releases page for 
  the 1.0 release (aching)

  GIRAPH-560: Input filtering (nitay)

  GIRAPH-621: Website Documentation: Basic Design Document (aching)

  GIRAPH-658: Remove final modifier from SimpleHiveToEdge.initializeRecords
  (majakabiljo)

  GIRAPH-656: Input from multiple tables doesn't work with multithreading
  (majakabiljo)

  GIRAPH-657: Remove unused reuseIncomingEdgeObjects option (apresta)

  GIRAPH-592: YourKit profiler (nitay)

  GIRAPH-618: Website Documentation: Aggregators (and sharded aggregators)
  (majakabiljo)

  GIRAPH-651: giraph-hive tests (nitay)

  GIRAPH-639: Add support for multiple Vertex/Edge inputs (majakabiljo)

  GIRAPH-653: Hadoop_non_secure broken (majakabiljo)

  GIRAPH-650: Exception in GiraphConfiguration initialization (majakabiljo)

  GIRAPH-648: Allow IO formats to add parameters to Configuration (majakabiljo)

  GIRAPH-635: Website Documentation: Missing presentations (ssc)

  GIRAPH-647: Update HiveIO to 0.8 (nitay)
