@@ -27,8 +27,8 @@ import org.apache.hadoop.mapreduce.InputSplit;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
 
 /**
- * Analogous to {@link RecordReader} for edges.  Will read the edges
- * from an input split.
+ * Analogous to {@link org.apache.giraph.bsp.BspRecordReader} for edges.
+ * Will read the edges from an input split.
  *
  * @param <I> Vertex id
  * @param <E> Edge data
