@@ -50,7 +50,8 @@ public class LongDoubleDoubleAdjacencyListVertexInputFormat
       AdjacencyListTextVertexReader {
 
     /**
-     * Constructor with {@link LineSanitizer}.
+     * Constructor with
+     * {@link AdjacencyListTextVertexInputFormat.LineSanitizer}.
      *
      * @param lineSanitizer the sanitizer to use for reading
      */
